--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "external/CommonLibSSE"]
-	path = external/CommonLibSSE
-	url = https://github.com/powerof3/CommonLibSSE.git
-[submodule "external/CommonLibAE"]
-	path = external/CommonLibAE
-	url = https://github.com/powerof3/CommonLibSSE.git
+[submodule "extern/CommonLibF4"]
+	path = extern/CommonLibF4
+	url = https://github.com/Ryan-rsm-McKenzie/CommonLibF4.git
